[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Menus/Icons/imagem_placeholder_disabled.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menu/IconButtons/IconButtons.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Menus/Icons/imagem_placeholder_enabled.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/Sound_effects/clique no botao.mp3" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.933333, 0.317647, 0.156863, 1 )
corner_radius_top_left = 29
corner_radius_top_right = 29
corner_radius_bottom_right = 29
corner_radius_bottom_left = 29

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[node name="IconButtons" type="Control"]
modulate = Color( 1, 1, 1, 0.6 )
anchor_left = 0.363281
anchor_top = 0.222222
anchor_right = 0.636719
anchor_bottom = 0.805555
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 360 )
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 175, 210 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="item_name" type="Label" parent="."]
anchor_left = 0.142857
anchor_top = 0.880952
anchor_right = 0.857143
anchor_bottom = 1.0
margin_left = -3.8147e-06
rect_min_size = Vector2( 200, 40 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Item name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Icon_button" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 360 )
mouse_filter = 1
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_button_pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="mouse_entered" from="." to="." method="_on_IconButtons_mouse_entered"]
[connection signal="pressed" from="Icon_button" to="." method="_on_Icon_button_pressed"]
